Bug 173528 - Stop button works incorrectly when clicking during fadeout
Summary: Stop button works incorrectly when clicking during fadeout
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (show other bugs)
Version: 2.0-beta
Platform: unspecified Linux
: LO normal
Target Milestone: ---
Assignee: Amarok Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-25 21:20 UTC by andreaswuest
Modified: 2009-12-09 11:28 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andreaswuest 2008-10-25 21:20:59 UTC
Version:           1.92.2 (using 4.1.2 (KDE 4.1.2), Kubuntu packages)
Compiler:          gcc
OS:                Linux (i686) release 2.6.24-21-generic

hello again,

the stop button does not work properly. when you click it the song is faded
out. complete fadeout takes about 4 seconds for me. if you keep pushing the stop button, the fadeout seems to start all over again. so if you keep pushing the stop button the song is actually never stopped, it keeps playing. i thing the stop button should only start the fadeout when clicked for the first time. 
should be easy to reproduce.

cheers, 
andy
Comment 1 andreaswuest 2008-10-25 21:24:24 UTC
almost immediately after you click the stop button the widget in the middle says 
"No track playing" (the translations for this string seems to be missing, because everything else in amarok is in german !!). however the track is still playing (fading out). the message should only appear after the fadeout is finished!
Comment 2 Mark Kretschmann 2008-10-25 21:27:33 UTC
Confirmed. It should either stop immediately when clicking twice, or just keep fading down normally.

But the current behaviour is a bug.
Comment 3 Sven Krohlas 2008-10-26 11:15:30 UTC
SVN commit 876019 by krohlas:

Adding missing i18n(). No break of string freeze this time, as that one has already been i18n()ed elsewhere.
CCBUG: 173528


 M  +1 -1      CurrentEngine.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=876019
Comment 4 Andreas Mützel 2008-10-26 12:57:42 UTC
fixed with r876053, pressing stop button when the current track is fading out now stops fadeout.
Comment 5 Mark Kretschmann 2008-10-30 10:06:18 UTC
SVN commit 877759 by markey:

Revert SVN commit 876053 by amuetzel, "Pressing the stop button while the current track is fading out now stops fadeout instead of restarting it."

This commit introduced a regression: Pressing the Stop button could crash in some cases. I'll have another look at this after Beta3 release.

BUG: 173792
CCBUG: 173528


 M  +1 -5      EngineController.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=877759
Comment 6 Mark Kretschmann 2008-11-08 09:15:16 UTC
SVN commit 881449 by markey:

Pressing Stop while fade-out is running will no longer restart the fading.

BUG: 173528


 M  +2 -0      ChangeLog  
 M  +5 -2      src/EngineController.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=881449
Comment 7 Sebastian Turzański 2008-12-10 21:58:45 UTC
it's still broken in 2.0
Comment 8 zsl1005 2008-12-11 07:44:57 UTC
It's the same in 2.0 final.
My Os is Ubuntu 8.10 Gnome, and use the package from ppa.
Comment 9 Mark Kretschmann 2008-12-11 08:09:43 UTC
@Sebastian and @zsl1005:

What Phonon backend are you using? Is it GStreamer? Then switch to xine, because the GStreamer backend is currently very buggy.