Pressing Stop while fade-out is running will no longer restart the fading.

BUG: 173528

svn path=/trunk/extragear/multimedia/amarok/; revision=881449